--- a/src/GUI/Views/DocumentationView.fxml
+++ b/src/GUI/Views/DocumentationView.fxml
@@ -15,19 +15,19 @@
 
 <BorderPane fx:id="borderPaneCEO" prefHeight="712.0" prefWidth="1321.0" styleClass="root" stylesheets="@../Css/DocumentationViewCss.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.DocumentationViewController">
    <left>
-      <AnchorPane BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="706.0" prefWidth="195.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="124.0" fitWidth="174.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="124.0" fitWidth="174.0" layoutX="11.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Images/WUAV.png" />
                </image>
             </ImageView>
-            <Button fx:id="btnReturn" layoutX="12.0" layoutY="637.0" mnemonicParsing="false" onAction="#handleReturn" prefHeight="30.0" prefWidth="150.0" text="Return" AnchorPane.bottomAnchor="32.59999999999998" />
-            <Button fx:id="btnSaveToDevice" layoutX="12.0" layoutY="570.0" mnemonicParsing="false" onAction="#handleSaveToDevice" prefHeight="30.0" prefWidth="150.0" text="Save to this Device" AnchorPane.bottomAnchor="99.59999999999998" />
-            <Button fx:id="btnSend" layoutX="12.0" layoutY="254.0" mnemonicParsing="false" onAction="#handleSendToPMOrTech" prefHeight="30.0" prefWidth="150.0" text="Send to Project Manager" AnchorPane.bottomAnchor="415.59999999999997" />
-            <Button fx:id="btnSave" layoutX="12.0" layoutY="195.0" mnemonicParsing="false" onAction="#handleSave" prefHeight="30.0" prefWidth="150.0" text="Save" AnchorPane.bottomAnchor="474.59999999999997" />
-            <Button fx:id="btnOpenPaint" layoutX="12.0" layoutY="316.0" mnemonicParsing="false" onAction="#handleOpenPaint" prefHeight="30.0" prefWidth="150.0" text="Open Paint" AnchorPane.bottomAnchor="353.59999999999997" />
-            <Button fx:id="btnAssignTech" layoutX="12.0" layoutY="387.0" mnemonicParsing="false" onAction="#handleAssignTech" prefHeight="30.0" prefWidth="150.0" text="Assign Technician" AnchorPane.bottomAnchor="282.59999999999997" />
+            <Button fx:id="btnReturn" layoutX="23.0" layoutY="637.0" mnemonicParsing="false" onAction="#handleReturn" prefHeight="30.0" prefWidth="150.0" text="Return" AnchorPane.bottomAnchor="32.60000000000002" />
+            <Button fx:id="btnSaveToDevice" layoutX="23.0" layoutY="565.0" mnemonicParsing="false" onAction="#handleSaveToDevice" prefHeight="30.0" prefWidth="150.0" text="Save to this Device" AnchorPane.bottomAnchor="104.60000000000002" />
+            <Button fx:id="btnSend" layoutX="23.0" layoutY="252.0" mnemonicParsing="false" onAction="#handleSendToPMOrTech" prefHeight="30.0" prefWidth="150.0" text="Send to Project Manager" AnchorPane.bottomAnchor="417.59999999999997" />
+            <Button fx:id="btnSave" layoutX="22.0" layoutY="194.0" mnemonicParsing="false" onAction="#handleSave" prefHeight="30.0" prefWidth="150.0" text="Save" AnchorPane.bottomAnchor="475.59999999999997" />
+            <Button fx:id="btnOpenPaint" layoutX="23.0" layoutY="316.0" mnemonicParsing="false" onAction="#handleOpenPaint" prefHeight="30.0" prefWidth="150.0" text="Open Paint" AnchorPane.bottomAnchor="353.59999999999997" />
+            <Button fx:id="btnAssignTech" layoutX="23.0" layoutY="386.0" mnemonicParsing="false" onAction="#handleAssignTech" prefHeight="30.0" prefWidth="150.0" text="Assign Technician" AnchorPane.bottomAnchor="283.59999999999997" />
          </children>
       </AnchorPane>
    </left>
@@ -54,7 +54,7 @@
             <Button fx:id="btnRemoveTechnician" layoutX="39.0" layoutY="621.0" mnemonicParsing="false" onAction="#handleRemoveTechnician" text="Remove Technician" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="39.0" />
             <ImageView fx:id="imImageView" fitHeight="201.0" fitWidth="423.0" layoutX="660.0" layoutY="191.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="191.0" />
             <TextField fx:id="txtCostumerEmail" layoutX="37.0" layoutY="133.0" promptText="Costumer Email" AnchorPane.leftAnchor="37.0" AnchorPane.topAnchor="133.0" />
-            <Button fx:id="btnScreenSize" layoutX="1068.0" layoutY="14.0" mnemonicParsing="false" AnchorPane.rightAnchor="52.0" AnchorPane.topAnchor="14.0" onAction="#handleScreenSize" />
+            <Button fx:id="btnScreenSize" layoutX="1068.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleScreenSize" AnchorPane.rightAnchor="52.0" AnchorPane.topAnchor="14.0" />
          </children>
       </AnchorPane>
    </center>
