--- a/src/GUI/Views/DocumentationView.fxml
+++ b/src/GUI/Views/DocumentationView.fxml
@@ -34,7 +34,7 @@
    <center>
       <AnchorPane prefHeight="634.0" prefWidth="1111.0" styleClass="anchor-pane" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnAddImage" layoutX="286.0" layoutY="646.0" mnemonicParsing="false" onAction="#handleAddImage" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Image" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="286.0" />
+            <Button fx:id="btnAddImage" layoutX="286.0" layoutY="646.0" mnemonicParsing="false" onAction="#handleAddImage" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Image" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="715.0" />
             <Button fx:id="btnAddDevice" layoutX="451.0" layoutY="646.0" mnemonicParsing="false" onAction="#handleAddDevice" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Device" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="549.8" />
             <Button fx:id="btnRemove" layoutX="620.0" layoutY="645.0" mnemonicParsing="false" onAction="#handleRemove" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Remove" AnchorPane.bottomAnchor="24.600000000000023" AnchorPane.rightAnchor="380.79999999999995" />
             <TextField fx:id="txtCostumerName" layoutX="39.0" layoutY="54.0" promptText="Costumer Name" AnchorPane.leftAnchor="39.0" AnchorPane.topAnchor="54.0" />
@@ -54,7 +54,7 @@
             <Button fx:id="btnRemoveTechnician" layoutX="39.0" layoutY="621.0" mnemonicParsing="false" onAction="#handleRemoveTechnician" text="Remove Technician" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="39.0" />
             <ImageView fx:id="imImageView" fitHeight="201.0" fitWidth="423.0" layoutX="660.0" layoutY="191.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="191.0" />
             <TextField fx:id="txtCostumerEmail" layoutX="37.0" layoutY="133.0" promptText="Costumer Email" AnchorPane.leftAnchor="37.0" AnchorPane.topAnchor="133.0" />
-            <Button fx:id="btnScreenSize" layoutX="1068.0" layoutY="14.0" mnemonicParsing="false" AnchorPane.rightAnchor="52.0" AnchorPane.topAnchor="14.0" onAction="#handleScreenSize" />
+            <Button fx:id="btnScreenSize" layoutX="1068.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleScreenSize" AnchorPane.rightAnchor="52.0" AnchorPane.topAnchor="14.0" />
          </children>
       </AnchorPane>
    </center>
