--- a/src/GUI/Views/SalesPersonView.fxml
+++ b/src/GUI/Views/SalesPersonView.fxml
@@ -49,7 +49,7 @@
                </items>
             </MenuButton>
             <Text fx:id="txtSearchText" layoutX="518.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search for:" wrappingWidth="76.109375" AnchorPane.rightAnchor="71.49062500000002" AnchorPane.topAnchor="78.05078125" />
-            <Button fx:id="btnScreenSize" layoutX="605.0" layoutY="14.0" mnemonicParsing="false" AnchorPane.rightAnchor="44.60000000000002" AnchorPane.topAnchor="14.0" onAction="#handleScreenSize" />
+            <Button fx:id="btnScreenSize" layoutX="605.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleScreenSize" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
    </center>
